start to add utils function to get id value of item
