# app/swagger/swagger.yaml
@@ -47,10 +47,6 @@ paths:
           in: 'formData'
           description: 'stringifyied version of a JSON object describing the context of the query'
           type: 'string'
-        - name: 'id_property'
-          in: 'formData'
-          description: 'property that identifies every item. Required when context provided'
-          type: 'string'
         - name: 'contextual_sort_data'
           in: 'formData'
           description: 'description of sorting if sorting by contextual properties'
